<?xml version="1.0"?>
<package format="3">
  <name>hri_rviz</name>
  <version>0.3.1</version>
  <description>
  This package contains several rviz plugins to visualize HRI-related topics (like face/body region of interests, 3D skeletons...)
  </description>
  <maintainer email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</maintainer>
  <author>Lorenzo Ferrini</author>
  <author>Séverin Lemaignan</author>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>hri_msgs</depend>
  <depend>hri</depend>
  <depend>cv_bridge</depend>
  <depend>rviz</depend>

  <build_depend>qtbase5-dev</build_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
